--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches-ignore: [scratch]
 jobs:
-  lint:
+  run:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
