--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -16,5 +16,6 @@ jobs:
         shell: bash
       - name: Execute main script file
         run: |
+           ./init.sh
            ./script.sh
         shell: bash
