--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -9,6 +9,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
+      - name: Install jq tool
+        run: |
+          sudo apt-get update
+          sudo apt-get install vsftpd
+          sudo apt-cache search curses
       - name: Prepare script files
         run: |
            sed -i -e's/\x0D$//' ./*.sh
