--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -9,11 +9,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
-      - name: Install jq tool
+      - name: Install packages
         run: |
           sudo apt-get update
-          sudo apt-get install vsftpd
-          sudo apt-cache search curses
+          sudo apt-get install vsftpd libncursesw5-dev libtinfo-dev
       - name: Prepare script files
         run: |
            sed -i -e's/\x0D$//' ./*.sh
@@ -22,4 +21,5 @@ jobs:
       - name: Execute main script file
         run: |
            ./init.sh
+           ./script.sh
         shell: bash
