--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -1,4 +1,3 @@
-# do this
 name: Execute Code Base
 on:
   push:
@@ -21,3 +20,18 @@ jobs:
         run: |
            ./init.sh
            ./script.sh
+      - name: Init new repo in dist folder and commit generated files
+        run: |
+          cd gh-pages
+          git init
+          git add -A
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git commit -m 'deploy'
+      - name: Force push to gh-pages
+        uses: ad-m/github-push-action@v0.5.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          force: true
+          directory: ./gh-pages
