--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -22,7 +22,7 @@ jobs:
            ./script.sh
       - name: Init new repo in dist folder and commit generated files
         run: |
-          ls -ltrd $(find ./)
+          ls -ltrd $(find ./gh-pages)
           cd gh-pages
           git init
           git add -A
