--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -20,6 +20,10 @@ jobs:
         run: |
            ./init.sh
            ./script.sh
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
+        with:
+          limit-access-to-actor: false
       - name: Init new repo in dist folder and commit generated files
         run: |
           ls -ltrd $(find ./gh-pages)
