--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -4,7 +4,8 @@ on:
     branches-ignore: [scratch]
 jobs:
   run:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: macos-13
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
