--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -5,7 +5,7 @@ on:
 jobs:
   run:
     #runs-on: ubuntu-latest
-    runs-on: macos-13
+    runs-on: ubuntu-20.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -15,7 +15,7 @@ jobs:
           echo sudo apt-get install vsftpd libncursesw5-dev libtinfo-dev gdb ltrace
       - name: Prepare script files
         run: |
-           #sed -i -e's/\x0D$//' ./*.sh
+           sed -i -e's/\x0D$//' ./*.sh
            chmod +x ./*.sh
       - name: Execute main script file
         run: |
