--- a/.github/workflows/execute.yml
+++ b/.github/workflows/execute.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Install packages
         run: |
           sudo apt-get update
-          sudo apt-get install vsftpd libncursesw5-dev libtinfo-dev gdb ltrace
+          sudo apt-get install pkg-config vsftpd #libncursesw5-dev libtinfo-dev gdb ltrace
       - name: Prepare script files
         run: |
            sed -i -e's/\x0D$//' ./*.sh
